<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.fake.steam.LoginActivity">
        <include layout="@layout/toolbar"/>

        <!-- CAMPO DE NOME QUE FICA AQUI MESMO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/dados"
            android:textColor="@color/colorAccent"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:accessibilityLiveRegion="polite"
            android:text="NOME"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/insira_nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/input_clientes"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="25"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"

            android:textColorHint="#CCC" />


        <!-- CAMPO DE ENDEREÇO QUE FICA AQUI MESMO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/telefone_cliente"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/telefone_cliente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/input_clientes"
            android:maxLength="16"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />


        <!-- CAMPO DE TELEFONE 2 QUE FICA AQUI MESMO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/telefone_cliente2"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/telefone_cliente2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/input_clientes"
            android:maxLines="1"
            android:maxLength="16"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <!-- CAMPO DE EMAIL QUE FICA AQUI MESMO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/email_cliente"
            android:maxLines="0"
            android:maxLength="30"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/email_cliente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/input_clientes"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"

            android:textColorHint="#CCC" />

        <!-- CAMPO DE INTERESSES QUE FICA AQUI MESMO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/interesse_cliente"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />


        <EditText
            android:id="@+id/interesse_cliente"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/input_interesse"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />


        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/confirmar_Cadastro"

            android:textColor="@color/colorAccent" />

    </LinearLayout>

</ScrollView>